--- a/readme.me
+++ b/readme.me
@@ -1,1 +1,3 @@
+<h1>Interface Chrome Extension</h1>
+
 "Interface" is chrome extension, productivity tool, and new tab home page. This tool helps efficiently navigate the internet. The extension replaces the new tab windows and displays a clock and the date, which serves as a minimalist launchpad for internet activity. Keyboards keys can be programmed to transport you to a bookmarked website with a single stroke. There are 62 programmable hotkeys available and a customizable search engine function that can be quickly changed.
