--- a/readme.me
+++ b/readme.me
@@ -1,3 +1,5 @@
-<h1>Interface Chrome Extension</h1>
+# Interface Chrome Extension
 
-"Interface" is chrome extension, productivity tool, and new tab home page. This tool helps efficiently navigate the internet. The extension replaces the new tab windows and displays a clock and the date, which serves as a minimalist launchpad for internet activity. Keyboards keys can be programmed to transport you to a bookmarked website with a single stroke. There are 62 programmable hotkeys available and a customizable search engine function that can be quickly changed.
+**Interface** is a Chrome extension, productivity tool, and new tab homepage. This tool helps you efficiently navigate the internet.
+
+The extension replaces the new tab window and displays a minimalist clock and date interface, serving as a launchpad for internet activity. Keyboard keys can be programmed to transport you to bookmarked websites with a single stroke. There are **62 programmable hotkeys** available, along with a **customizable search engine function** that can be quickly changed.
